--- a/resources/css3/style.css
+++ b/resources/css3/style.css
@@ -370,7 +370,7 @@ body {
   text-decoration: none;
   margin: 3rem 0;
   border: 0.2rem solid #76b900;
-  padding: 1.4rem 6rem;
+  padding: 1.5rem 6rem;
   text-transform: uppercase;
   overflow: hidden;
   transition: all 1s ease; }
@@ -688,6 +688,13 @@ body {
       .section-container-2__icon {
         margin-bottom: 0;
         top: 23%; } }
+    @media (max-width: 25.875em), (max-height: 46em) {
+      .section-container-2__icon {
+        top: 15%;
+        left: 45%; } }
+    @media (max-width: 23.435em), (max-height: 41.687em) {
+      .section-container-2__icon {
+        top: 20%; } }
   .section-container-2__text {
     padding: 20rem 5rem 0 5rem;
     text-align: center; }
@@ -695,6 +702,12 @@ body {
       .section-container-2__text {
         padding-top: 30rem;
         padding-bottom: 15rem; } }
+    @media (max-width: 25.875em), (max-height: 46em) {
+      .section-container-2__text {
+        margin-top: -10rem; } }
+    @media (max-width: 23.435em), (max-height: 41.687em) {
+      .section-container-2__text {
+        margin-top: -10rem; } }
   @media (max-width: 37.5em) {
     .section-container-2__button-2 {
       position: absolute;
@@ -714,6 +727,9 @@ body {
   overflow: hidden;
   position: relative;
   z-index: 13; }
+  @media (max-width: 48em), (max-height: 64em) {
+    .section-container-3 {
+      margin-top: -20rem; } }
   @media (max-width: 37.5em) {
     .section-container-3 {
       padding-bottom: 80rem; } }
@@ -721,7 +737,7 @@ body {
     font-size: 6rem;
     position: absolute;
     top: 28%;
-    left: 48%;
+    left: 48.5%;
     display: inline-block;
     background-image: linear-gradient(to right, #7cd000, #577a1a);
     -webkit-background-clip: text;
@@ -735,6 +751,13 @@ body {
       .section-container-3__icon {
         margin-bottom: 0;
         top: 20%; } }
+    @media (max-width: 25.875em), (max-height: 46em) {
+      .section-container-3__icon {
+        top: 25%;
+        left: 45%; } }
+    @media (max-width: 23.435em), (max-height: 41.687em) {
+      .section-container-3__icon {
+        top: 25%; } }
   .section-container-3__text {
     padding-right: 5rem;
     padding-left: 5rem;
@@ -785,6 +808,9 @@ body {
         margin-bottom: 0;
         top: 50%;
         margin-top: -15rem; } }
+    @media (max-width: 23.435em), (max-height: 41.687em) {
+      .section-container-4__icon {
+        top: 45%; } }
   .section-container-4__text {
     padding-right: 5rem;
     padding-left: 5rem;
@@ -793,6 +819,12 @@ body {
     @media (max-width: 56.25em) {
       .section-container-4__text {
         padding-top: 50rem; } }
+    @media (max-width: 25.875em), (max-height: 46em) {
+      .section-container-4__text {
+        margin-top: -20rem; } }
+    @media (max-width: 23.435em), (max-height: 41.687em) {
+      .section-container-4__text {
+        margin-top: -20rem; } }
   @media (max-width: 37.5em) {
     .section-container-4__button-4 {
       position: absolute;
@@ -823,9 +855,38 @@ body {
       .section-game-1__container {
         width: 100%;
         text-align: center; } }
+    @media (max-width: 25.875em), (max-height: 46em) {
+      .section-game-1__container {
+        margin-top: -25rem; } }
+    @media (max-width: 23.435em), (max-height: 41.687em) {
+      .section-game-1__container {
+        margin-top: -25rem; } }
   .section-game-1__supp {
     font-size: 1.3rem;
     margin-top: -3rem; }
+  .section-game-1__video iframe {
+    position: absolute;
+    top: 35%;
+    left: 60%;
+    /* --- MEDIA QUERIES | FOR THE VIDEO */ }
+    @media (min-width: 86.375em) {
+      .section-game-1__video iframe {
+        left: 50%; } }
+    @media (max-width: 81.875em) {
+      .section-game-1__video iframe {
+        left: 40%; } }
+    @media (max-width: 75em) {
+      .section-game-1__video iframe {
+        left: 45%;
+        top: 25%;
+        width: 50%;
+        height: 50%; } }
+    @media (max-width: 37.5em) {
+      .section-game-1__video iframe {
+        top: 60%;
+        left: 15%;
+        width: 70%;
+        height: 35%; } }
 
 /* ------------------------------------------- */
 /* SECTION GAME 2 | IN HOME
@@ -852,9 +913,37 @@ body {
       .section-game-2__container {
         width: 100%;
         text-align: center; } }
+    @media (max-width: 25.875em), (max-height: 46em) {
+      .section-game-2__container {
+        margin-top: -25rem; } }
+    @media (max-width: 23.435em), (max-height: 41.687em) {
+      .section-game-2__container {
+        margin-top: -25rem; } }
   .section-game-2__supp {
     font-size: 1.3rem;
     margin-top: -3rem; }
+  .section-game-2__video iframe {
+    position: absolute;
+    top: 35%;
+    right: 60%;
+    /* --- MEDIA QUERIES | FOR THE VIDEO */ }
+    @media (min-width: 86.375em) {
+      .section-game-2__video iframe {
+        right: 50%; } }
+    @media (max-width: 81.875em) {
+      .section-game-2__video iframe {
+        right: 44%; } }
+    @media (max-width: 75em) {
+      .section-game-2__video iframe {
+        top: 22%;
+        width: 50%;
+        height: 50%; } }
+    @media (max-width: 37.5em) {
+      .section-game-2__video iframe {
+        top: 60%;
+        right: 15%;
+        width: 70%;
+        height: 35%; } }
 
 /* ------------------------------------------- */
 /* SECTION GAME 3 | IN HOME
@@ -881,9 +970,38 @@ body {
       .section-game-3__container {
         width: 100%;
         text-align: center; } }
+    @media (max-width: 25.875em), (max-height: 46em) {
+      .section-game-3__container {
+        margin-top: -25rem; } }
+    @media (max-width: 23.435em), (max-height: 41.687em) {
+      .section-game-3__container {
+        margin-top: -25rem; } }
   .section-game-3__supp {
     font-size: 1.3rem;
     margin-top: -3rem; }
+  .section-game-3__video iframe {
+    position: absolute;
+    top: 35%;
+    left: 60%;
+    /* --- MEDIA QUERIES | FOR THE VIDEO */ }
+    @media (min-width: 86.375em) {
+      .section-game-3__video iframe {
+        left: 50%; } }
+    @media (max-width: 81.875em) {
+      .section-game-3__video iframe {
+        left: 40%; } }
+    @media (max-width: 75em) {
+      .section-game-3__video iframe {
+        left: 45%;
+        top: 25%;
+        width: 50%;
+        height: 50%; } }
+    @media (max-width: 37.5em) {
+      .section-game-3__video iframe {
+        top: 60%;
+        left: 15%;
+        width: 70%;
+        height: 35%; } }
 
 /* ------------------------------------------- */
 /* SECTION PRODUCTS SETUP / PRICING | CARDS
@@ -961,7 +1079,7 @@ body {
     position: absolute;
     top: 50%;
     left: 28%;
-    transform: translate(-50%, -50%);
+    transform: translate(-65%, -50%);
     text-align: left; }
     .header__text-box__button {
       margin-top: -2rem; }
@@ -989,6 +1107,7 @@ body {
         overflow: hidden;
         background-image: url(../images/ray-tracing-2.jpg);
         background-size: cover;
+        background-position: top;
         height: 100%;
         width: 100%;
         padding-top: 30rem; } }
@@ -1162,9 +1281,9 @@ nav.scroll ul li a {
     position: absolute;
     top: 45%;
     right: 50%; }
-    @media (max-width: 48em) {
+    @media (max-width: 48em), (max-height: 64em) {
       .section-pb__heading {
-        padding-top: 3rem;
+        padding-top: 4.5rem;
         font-size: 2.8rem; } }
     @media (max-width: 37.5em) {
       .section-pb__heading {
@@ -1175,9 +1294,9 @@ nav.scroll ul li a {
     height: 20rem;
     top: 27%;
     left: 48%; }
-    @media (max-width: 48em) {
+    @media (max-width: 48em), (max-height: 64em) {
       .section-pb__logo {
-        top: 42%; } }
+        top: 35%; } }
     @media (max-width: 37.5em) {
       .section-pb__logo {
         height: 10rem;
