--- a/resources/sass/abstracts/_mixins.scss
+++ b/resources/sass/abstracts/_mixins.scss
@@ -68,12 +68,21 @@
 
 
 @mixin respond($breakpoint) {
+
+    @if $breakpoint == iphone-p {
+        @media (max-width: 25.875em), (max-height: 46em) { @content };     // 414px = width | Iphone 6/7/8 Plus
+    }
+
+    @if $breakpoint == iphone {
+        @media (max-width: 23.435em), (max-height: 41.687em) { @content }; // 375px | Iphone 6/7/8
+    }
+
     @if $breakpoint == phone {
         @media (max-width: 37.5em) { @content };    // 600px
     }
 
     @if $breakpoint == ipad {
-        @media (max-width: 48em) { @content }; // 768px - IPAD
+        @media (max-width: 48em), (max-height: 64em) { @content }; // 768px - IPAD
     }
 
     @if $breakpoint == tab-port {
